uefi-macros/tests/ui/fail/entry_unnamed_image_arg.stderr
error: Entry method's arguments must be named
 --> tests/ui/fail/entry_unnamed_image_arg.rs:8:22
  |
8 | fn unnamed_image_arg(_: Handle, _st: SystemTable<Boot>) -> Status {
  |                      ^
